--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   var map = L.map('map').setView([33.901526, 35.518338], 13, );
 
-    L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+    L.tileLayer('https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
 }).addTo(map);
     
 
